fixed the nav bottom on ios

--- a/frontend/scss/nav.scss
+++ b/frontend/scss/nav.scss
@@ -151,7 +151,7 @@ a {
 }
 
 .iphone-nav-bt {
-    bottom: -5px; 
+    bottom: -5px !important; 
     margin-bottom: 4px;
 }
 
